// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pcln-slider RangeSlider 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  height: 32px;
  padding-top: 12px;
  border-radius: 9999px;
  touch-action: none;
}

.c1 .rc-slider-rail,
.c1 .rc-slider-track {
  height: 8px;
}

.c1 .rc-slider-handle {
  width: 32px;
  height: 32px;
  margin-top: -12px;
}

.c1 .rc-slider-rail {
  position: absolute;
  width: 100%;
  background-color: #f4f6f8;
  border-radius: 9999px;
}

.c1 .rc-slider-track {
  position: absolute;
  left: 0;
  border-radius: 9999px;
  background-color: #0068ef;
}

.c1 .rc-slider-handle {
  position: absolute;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-radius: 9999px;
  border: solid 4px #0068ef;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  background-color: #fff;
  touch-action: pan-x;
}

.c1 .rc-slider-handle-dragging {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  border: solid 4px #049;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 2px 0 rgba(0,0,0,0.2),0 4px 2px -2px rgba(0,0,0,0.12),0 4px 8px -1px rgba(0,0,0,0.16);
}

.c1.rc-slider-disabled {
  color: #c0cad5;
}

.c1.rc-slider-disabled .rc-slider-handle {
  box-shadow: none;
  cursor: default;
}

<div
    class="c0"
  >
    <div
      class="rc-slider c1 rc-slider-horizontal"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track rc-slider-track-1"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle rc-slider-handle-1"
        role="slider"
        style="left: 0%; transform: translateX(-50%);"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle rc-slider-handle-2"
        role="slider"
        style="left: 0%; transform: translateX(-50%);"
        tabindex="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pcln-slider Slider 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  height: 32px;
  padding-top: 12px;
  border-radius: 9999px;
  touch-action: none;
}

.c1 .rc-slider-rail,
.c1 .rc-slider-track {
  height: 8px;
}

.c1 .rc-slider-handle {
  width: 32px;
  height: 32px;
  margin-top: -12px;
}

.c1 .rc-slider-rail {
  position: absolute;
  width: 100%;
  background-color: #f4f6f8;
  border-radius: 9999px;
}

.c1 .rc-slider-track {
  position: absolute;
  left: 0;
  border-radius: 9999px;
  background-color: #0068ef;
}

.c1 .rc-slider-handle {
  position: absolute;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-radius: 9999px;
  border: solid 4px #0068ef;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  background-color: #fff;
  touch-action: pan-x;
}

.c1 .rc-slider-handle-dragging {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  border: solid 4px #049;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 2px 0 rgba(0,0,0,0.2),0 4px 2px -2px rgba(0,0,0,0.12),0 4px 8px -1px rgba(0,0,0,0.16);
}

.c1.rc-slider-disabled {
  color: #c0cad5;
}

.c1.rc-slider-disabled .rc-slider-handle {
  box-shadow: none;
  cursor: default;
}

<div
    class="c0"
  >
    <div
      class="rc-slider c1 rc-slider-horizontal"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle"
        role="slider"
        style="left: 0%; transform: translateX(-50%);"
        tabindex="0"
      />
    </div>
  </div>
</DocumentFragment>
`;
